# ms1

./: .dockerignore  .env.example  .env.production.example  .env.render.example  .env.staging.example  .eslintrc.cjs  .gitignore  1MSGUIDE.MD  1MSGUIDE_NO_HW_ALTERNATIVE.md  1MSGUIDE_REFLECTION.md  ACID-CHECKLIST.MD  ACID_ANALYSIS_REPORT.md  ACID_MODULE_INTEGRATION_PROPOSAL.md  AIGUIDE  AISE_AGENTS_FIX_PLAN.md  AISE_AGENTS_PROGRESS_REPORT.md  AISE_REGISTRATION_FIX_TODO.md  AISE_UNIFIED_INTELLIGENCE_SYSTEM.md  AI_AGENT_REGISTRY.toml  AI_AGENT_REGISTRY_AUDIT_REPORT.md  AI_AGENT_REGISTRY_CORRECTED.toml  ALLBRIGHT_72_KPI_SYSTEM_MAP.md  ALLBRIGHT_REMEDIATION_PLAN.md  ALLBRIGHT_SYSTEM_ANALYSIS_REPORT.md  ALLBRIGHT_VALIDATION_EVALUATION.md  ALLFIXED_ARCHITECTURE_DOCUMENTATION.md  ALLRIGHT_DIRECTORY_MASTER_BLUEPRINT_TABLE.md  APPMAP  ARBITRAGE_PERFORMANCE_COMPARISON.md  ARCHITECTURE_GAP_ANALYSIS.md  AUDIT_AGENT_MODULE_MAPPING_VS_PROTOCOL.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_PRODUCTION_DEPLOYMENT_READINESS_REPORT.md  AUDIT_SECOND_ROUND_FINDINGS.md  AUTO_OPTIMIZATION_ARCHITECTURAL_ANALYSIS.md  AUTO_OPTIMIZATION_MASTER_MATRIX.md  AUTO_TRANSFER_FIX_IMPLEMENTATION_PLAN.md  AllBright.Agent.md  BLOCKCHAIN_WINDOW_IMPLEMENTATION_PLAN.md  BLOCKER_REMEDIATION_PLAN.md  (+201 more)
.github/workflows/: ci-cd.yml  security-gates.yml
.refact/buddy/: diagnostics.jsonl  runtime_queue.jsonl  state.json  user_activity.jsonl
.refact/stats/: 00000001.jsonl
.refact/tasks/: index.json
.refact/trajectories/: 39d922df-3208-4f15-aca4-ef8b1e7bb2ab.json  b390e7ee-ec37-4de9-8400-b9e37831d172.json  index.json
apps/dashboard/: .env.example  Dockerfile  README.md  api-shim.mjs  index.html  metadata.json  nginx.conf  package-lock.json  package.json  server.ts  vite.config.ts
backend/: .env.example  AUDIT_LOGGING_INTEGRATION.md  Cargo.toml  Dockerfile  ENV_VALIDATION_INTEGRATION.md  GRACEFUL_SHUTDOWN_INTEGRATION.md  HEALTH_CHECK_INTEGRATION.md  IP_WHITELIST_INTEGRATION.md  SECRET_ROTATION_INTEGRATION.md  TWO_FACTOR_AUTH_INTEGRATION.md  ai_agents.rs  aise_unified_intelligence.rs  audit_logging.rs  auto_transfer_scheduler.rs  balance_simulator.rs  build.rs  build_guard.rs  c2_redundancy.rs  c2_service.proto  cargo_check_output.txt  cargo_check_output2.txt  cargo_errors.txt  cert_utils.rs  champion_challenger.rs  chaos_lab.rs  constitution_guard.rs  continuum_optimization.rs  copilot-panel.md  copilot_system_access.rs  cross_agent_learning.rs  db_init.rs  deployment.rs  disaster_recovery.rs  emergency_sweep.rs  encrypt_env_files.py  env_validation.rs  error.rs  fixed_point_core.rs  flashbots_mev_protection.rs  graceful_shutdown.rs  (+115 more)
backend/ai/: groq.rs  manager.rs  mod.rs  openrouter.rs  provider_registry.rs
backend/ai_agents/: AI108_AI135_INTEGRATION.md  ai108_ai135.rs
backend/benches/: kpi_benchmarks.rs
backend/contracts/: aave.rs  balancer.rs  dydx.rs  mod.rs  uniswap.rs
backend/learning/: mod.rs
backend/models/: mod.rs
backend/prisma/: schema.prisma
backend/submicron/: benches.rs  branchless_execution.rs  lock_free_queue.rs  memory_pool.rs  mod.rs  predictive_batching.rs  simd_fixed_point.rs  state_prediction.rs  unified_engine.rs  zero_copy_network.rs
backend/upgrade4_kpi_sim/: Cargo.toml
backend/upgrade4_kpi_sim/src/: main.rs
backend/upgrade4_sim/: Cargo.toml
backend/upgrade4_sim/src/: main.rs
contracts/: AllBrightGovernance.sol  AllBrightTimelock.sol  FlashLoanArbitrage.sol  Foundry.toml
k8s/: hpa.yaml  network_policy.yaml  runner.yaml
monolith/: Cargo.toml  build.rs  main.rs
prometheus/: alert.rules.yml  alerts.yml  loki-config.yml
scripts/: deploy_allbright_pipeline.ps1  encrypt_env_files.py  purge_secrets.sh  verify_all.sh  verify_kpi_evidence.sh  verify_live_endpoints.ps1  verify_modules.sh
src-tauri/:  Cargo.toml  Cargo.toml  LICENSE  build-dashboard.cmd  build_log.txt  security-policies.reg  stealth-network-init.ps1  tauri.conf.json  verify_build_and_launch.ps1
src-tauri/src/: lib.rs  main.rs
(+36 files in other folders)
