[package]
name = "allbright-c2-backend"
version = "119.0.0"
edition = "2021"
build = "build.rs"

[lib]
name = "allbright_c2"
path = "lib.rs"

[[bin]]
name = "allbright-c2-backend"
path = "main.rs"

[[bin]]
name = "db-init"
path = "db_init.rs"

[[bin]]
name = "env-migrate"
path = "src/bin/env-migrate.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
regex = "1"
dashmap = "5.5"
hex = "0.4"
tokio = { version = "1.38", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.12", features = ["tls-native-roots"] }
prost = "0.13"
seahash = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
serde_yaml = "0.9"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "sqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
secrecy = "0.8"
keyring = "2"
jsonwebtoken = "9"
k256 = "0.13"
dotenvy = "0.15"

# Security: AES-256-GCM encryption for encrypted vault
aes-gcm = "0.10"

# Security: Secure memory zeroization
zeroize = { version = "1.7", features = ["derive"] }

# Security: Argon2id key derivation (memory-hard, brute-force resistant)
argon2 = "0.5"

# Blockchain: Ethereum/EVM interaction
ethers = { version = "2.0", features = ["rustls"] }
ethers-core = "2.0"
eyre = "0.6"

# Security: Additional error handling
thiserror = "1"
kube = { version = "0.92", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["v1_29"] }
hyper = { version = "1", features = ["full"] }
governor = "0.6"
native-tls = "0.2"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
rcgen = "0.13"
lazy_static = "1.4"
rig = "0.39"
anyhow = "1"
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
aws-lc-rs = "1.13"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
parking_lot = "0.12"
ndarray = "0.15"
ndarray-linalg = "0.16"
statrs = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true