[package]
name = "allbright-defi-v119"
version = "119.0.0"
description = "AllBright Defi Software Engineering Ltd. AllBright- V119 2026 - Sovereign Desktop Application"
authors = ["AllBright Defi Software Engineering Ltd. AllBright- V119 2026"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "allbright_desktop_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
